jugando un poquito con los media queries

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <a href="#inicio">Inicio</a>
           </li>
           <li>
-            <a href="#about">Sobre nosotros</a>
+            <a href="#about"
+              ><span class="nosotros-text">Sobre</span> nosotros</a
+            >
           </li>
           <li>
             <a href="#products">Productos</a>
